src/gramaticaParser.py
# Generated from gramatica.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramaticaParser ( Parser ):

    grammarFileName = "gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'start'", "'stop;'", "'Int'", "'Real'", 
                     "'Logic'", "'echo'", "'take'", "'='", "<INVALID>", 
                     "','", "';'", "'('", "')'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'++'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "VG", "PV", "AP", "FP", "TEXT", 
                      "NUM", "OP", "SUM", "SUB", "MUL", "DIV", "CONCAT", 
                      "BLANK" ]

    RULE_programa = 0
    RULE_dclr = 1
    RULE_tipo = 2
    RULE_cmd = 3
    RULE_showcmd = 4
    RULE_readcmd = 5
    RULE_atrbcmd = 6
    RULE_atrbcmdL = 7
    RULE_expr = 8
    RULE_exprL = 9

    ruleNames =  [ "programa", "dclr", "tipo", "cmd", "showcmd", "readcmd", 
                   "atrbcmd", "atrbcmdL", "expr", "exprL" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    ID=9
    VG=10
    PV=11
    AP=12
    FP=13
    TEXT=14
    NUM=15
    OP=16
    SUM=17
    SUB=18
    MUL=19
    DIV=20
    CONCAT=21
    BLANK=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dclr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.DclrContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.DclrContext,i)


        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.CmdContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.CmdContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = gramaticaParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.match(gramaticaParser.T__0)
            self.state = 23 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 23
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3, 4, 5]:
                    self.state = 21
                    self.dclr()
                    pass
                elif token in [6, 7, 9]:
                    self.state = 22
                    self.cmd()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 25 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 760) != 0)):
                    break

            self.state = 27
            self.match(gramaticaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DclrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(gramaticaParser.TipoContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.ID)
            else:
                return self.getToken(gramaticaParser.ID, i)

        def PV(self):
            return self.getToken(gramaticaParser.PV, 0)

        def VG(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.VG)
            else:
                return self.getToken(gramaticaParser.VG, i)

        def getRuleIndex(self):
            return gramaticaParser.RULE_dclr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDclr" ):
                listener.enterDclr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDclr" ):
                listener.exitDclr(self)




    def dclr(self):

        localctx = gramaticaParser.DclrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_dclr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.tipo()
            self.state = 30
            self.match(gramaticaParser.ID)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 31
                self.match(gramaticaParser.VG)
                self.state = 32
                self.match(gramaticaParser.ID)
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(gramaticaParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticaParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = gramaticaParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 56) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atrbcmd(self):
            return self.getTypedRuleContext(gramaticaParser.AtrbcmdContext,0)


        def showcmd(self):
            return self.getTypedRuleContext(gramaticaParser.ShowcmdContext,0)


        def readcmd(self):
            return self.getTypedRuleContext(gramaticaParser.ReadcmdContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmd" ):
                listener.enterCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmd" ):
                listener.exitCmd(self)




    def cmd(self):

        localctx = gramaticaParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_cmd)
        try:
            self.state = 45
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.atrbcmd()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.showcmd()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.readcmd()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowcmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AP(self):
            return self.getToken(gramaticaParser.AP, 0)

        def FP(self):
            return self.getToken(gramaticaParser.FP, 0)

        def PV(self):
            return self.getToken(gramaticaParser.PV, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.ID)
            else:
                return self.getToken(gramaticaParser.ID, i)

        def TEXT(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.TEXT)
            else:
                return self.getToken(gramaticaParser.TEXT, i)

        def getRuleIndex(self):
            return gramaticaParser.RULE_showcmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowcmd" ):
                listener.enterShowcmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowcmd" ):
                listener.exitShowcmd(self)




    def showcmd(self):

        localctx = gramaticaParser.ShowcmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_showcmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(gramaticaParser.T__5)
            self.state = 48
            self.match(gramaticaParser.AP)
            self.state = 50 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 49
                _la = self._input.LA(1)
                if not(_la==9 or _la==14):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 52 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==9 or _la==14):
                    break

            self.state = 54
            self.match(gramaticaParser.FP)
            self.state = 55
            self.match(gramaticaParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadcmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AP(self):
            return self.getToken(gramaticaParser.AP, 0)

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def FP(self):
            return self.getToken(gramaticaParser.FP, 0)

        def PV(self):
            return self.getToken(gramaticaParser.PV, 0)

        def TEXT(self):
            return self.getToken(gramaticaParser.TEXT, 0)

        def VG(self):
            return self.getToken(gramaticaParser.VG, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_readcmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadcmd" ):
                listener.enterReadcmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadcmd" ):
                listener.exitReadcmd(self)




    def readcmd(self):

        localctx = gramaticaParser.ReadcmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_readcmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(gramaticaParser.T__6)
            self.state = 58
            self.match(gramaticaParser.AP)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 59
                self.match(gramaticaParser.TEXT)
                self.state = 60
                self.match(gramaticaParser.VG)


            self.state = 63
            self.match(gramaticaParser.ID)
            self.state = 64
            self.match(gramaticaParser.FP)
            self.state = 65
            self.match(gramaticaParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtrbcmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def atrbcmdL(self):
            return self.getTypedRuleContext(gramaticaParser.AtrbcmdLContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_atrbcmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtrbcmd" ):
                listener.enterAtrbcmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtrbcmd" ):
                listener.exitAtrbcmd(self)




    def atrbcmd(self):

        localctx = gramaticaParser.AtrbcmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_atrbcmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(gramaticaParser.ID)
            self.state = 68
            self.atrbcmdL()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtrbcmdLContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(gramaticaParser.ExprContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_atrbcmdL

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtrbcmdL" ):
                listener.enterAtrbcmdL(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtrbcmdL" ):
                listener.exitAtrbcmdL(self)




    def atrbcmdL(self):

        localctx = gramaticaParser.AtrbcmdLContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atrbcmdL)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(gramaticaParser.T__7)
            self.state = 71
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PV(self):
            return self.getToken(gramaticaParser.PV, 0)

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def NUM(self):
            return self.getToken(gramaticaParser.NUM, 0)

        def TEXT(self):
            return self.getToken(gramaticaParser.TEXT, 0)

        def exprL(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.ExprLContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.ExprLContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = gramaticaParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 49664) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16:
                self.state = 74
                self.exprL()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(gramaticaParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprLContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OP(self):
            return self.getToken(gramaticaParser.OP, 0)

        def ID(self):
            return self.getToken(gramaticaParser.ID, 0)

        def NUM(self):
            return self.getToken(gramaticaParser.NUM, 0)

        def TEXT(self):
            return self.getToken(gramaticaParser.TEXT, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_exprL

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprL" ):
                listener.enterExprL(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprL" ):
                listener.exitExprL(self)




    def exprL(self):

        localctx = gramaticaParser.ExprLContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_exprL)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(gramaticaParser.OP)
            self.state = 83
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 49664) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





